Added GitHub link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
           <a href="https://github.com/Claudia82p" target="_blank"
             >Claudia Porcu</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a href="https://github.com/Claudia82p/my-new-app" target="_blank">
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
